2002-05-18  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c: 
	(toc_start): fixed mem leak
	(toc_scrollkeeper): fixed mem leak

	* src/yelp-view-toc.h: don't include gtkhtml2 headers.

	* src/yelp-view-toc.c: 
	- include libxml/parser.h now that we don't include gtkhtml2
	  headers here any more.

	* src/yelp-html-gtkhtml1: 
	- Added
	- Makes yelp use GtkHTML1 for HTML rendering instead of GtkHTML2.
	
	* src/yelp-html-gtkhtml2: Renamed from yelp-html.c

	* src/yelp-html.c: Moved to yelp-html-gtkhtml2.c

	* src/Makefile.am (html_widget_impl): check for the correct
	  html-widget implementation.

	* configure.in: 
	- added --with-html-widget switch which controls if GtkHTML1 or
	  GtkHTML2 should be used. Default is GtkHTML2
	- Check for gtkhtml1 libraries and headers if that library should
	  be used.
	- Removed bzip2-check, left over from when I tried to merge
	  man2html into yelp.

2002-05-18  Richard Hult  <rhult@codefactory.se>

	* src/yelp-window.c: Use stock item for about menu item. 

2002-05-18  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c: 
	- don't handle YelpViewTOC as a html view any more. 
	- use yelp_view_toc_get_widget when you need the widget.

	* src/yelp-view-toc.c: 
	- don't inherit HtmlView, instead be a GObject (make all the views
	  a common base class).
	- Removed html view stuff and use YelpHtml instead.
	(toc_link_clicked_cb): removed
	(toc_open): removed, use yelp_html_clear
	(toc_close): removed, use yelp_html_close
	(toc_write): removed, use yelp_html_write
	(toc_printf): removed, use yelp_html_printf
	(yelp_view_toc_open_uri): don't try to set adjustment, not a html
	  view any more
	(toc_uri_selected_cb): added, signal from YelpHtml, just proxy.

	* src/yelp-html.c 
	(yelp_html_new): 
	- Just set the view to be white
	- Use the yelp_html_* functions instead of html_* directly.
	(yelp_html_write): 
	- Swapped len and data arguments.
	- If len = -1, assume NULL terminated string and use strlen.